@@ -508,6 +508,24 @@ CPPFLAGS="$user_CPPFLAGS"
 AC_SUBST(INCLUDE_FLAGS)
 
 #--------------------------------------------------------------------
+# Disable updating the obsolete directory structure
+#--------------------------------------------------------------------
+gs_move_obsolete=yes
+AC_ARG_ENABLE(move-obsolete, 
+[--disable-move-obsolete		Disable moving obsolete dir structure], 
+  gs_move_obsolete=$enableval,
+  gs_move_obsolete=yes)
+
+if test "$gs_move_obsolete" = "yes"; then
+  GNUSTEP_MOVE_OBSOLETE=move_obsolete;
+  AC_MSG_NOTICE(*** WARNING any old GNUstep directories installed before gnustep-make 1.7.0 will be moved to the new locations unless disabled in configure)
+else
+  GNUSTEP_MOVE_OBSOLETE=
+  AC_MSG_NOTICE(Old GNUstep directories will not be moved)
+fi
+AC_SUBST(GNUSTEP_MOVE_OBSOLETE)
+
+#--------------------------------------------------------------------
 # Record the version
 #--------------------------------------------------------------------
 AC_MSG_CHECKING(for the version of gnustep-make we are compiling)
